Trabajando en cartelera y detalle

--- a/src/main/resources/views/PaneCartelera.fxml
+++ b/src/main/resources/views/PaneCartelera.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneCartelera">
+<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneCarteleraController">
    <children>
       <VBox alignment="TOP_CENTER" maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -30,17 +29,14 @@
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster00" fitHeight="170.0" fitWidth="130.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
+                        <ImageView fx:id="imgPoster00" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
                            <HBox.margin>
                               <Insets />
                            </HBox.margin>
                         </ImageView>
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
-                              <Label fx:id="lblTitulo00" text="Título" textFill="WHITE" VBox.vgrow="ALWAYS">
+                              <Label fx:id="lblTitulo00" textFill="WHITE" VBox.vgrow="ALWAYS">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
                                  </font>
@@ -48,12 +44,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="lblInfo00" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true" VBox.vgrow="ALWAYS">
+                              <Label fx:id="lblInfo00" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" textFill="WHITE" wrapText="true" VBox.vgrow="ALWAYS">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="lblGenero00" prefWidth="405.0" text="Género" textFill="WHITE" VBox.vgrow="ALWAYS">
+                              <Label fx:id="lblGenero00" prefWidth="405.0" textFill="WHITE" VBox.vgrow="ALWAYS">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
@@ -70,14 +66,10 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster10" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster10" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
-                              <Label fx:id="lblTitulo10" prefWidth="405.0" text="Título" textFill="WHITE">
+                              <Label fx:id="lblTitulo10" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
                                  </font>
@@ -85,12 +77,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="lblInfo10" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lblInfo10" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label prefWidth="405.0" text="Género" textFill="WHITE">
+                              <Label fx:id="lblGenero10" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
@@ -107,14 +99,10 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster01" fitHeight="170.0" fitWidth="130.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster01" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
-                              <Label fx:id="lblTitulo01" prefWidth="405.0" text="Título" textFill="WHITE">
+                              <Label fx:id="lblTitulo01" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
                                  </font>
@@ -122,12 +110,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="lblInfo01" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lblInfo01" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="lblGenero01" prefWidth="405.0" text="Género" textFill="WHITE">
+                              <Label fx:id="lblGenero01" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
@@ -144,14 +132,10 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster11" fitHeight="170.0" fitWidth="130.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster11" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
-                              <Label fx:id="lblTitulo11" prefWidth="405.0" text="Título" textFill="WHITE">
+                              <Label fx:id="lblTitulo11" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
                                  </font>
@@ -159,12 +143,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="lblInfo11" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lblInfo11" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="lblGenero11" prefWidth="405.0" text="Género" textFill="WHITE">
+                              <Label fx:id="lblGenero11" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
@@ -181,14 +165,10 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster02" fitHeight="170.0" fitWidth="130.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster02" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
-                              <Label fx:id="lblTitulo02" prefWidth="405.0" text="Título" textFill="WHITE">
+                              <Label fx:id="lblTitulo02" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
                                  </font>
@@ -196,12 +176,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="lblInfo02" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lblInfo02" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="lblGenero02" prefWidth="405.0" text="Género" textFill="WHITE">
+                              <Label fx:id="lblGenero02" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
@@ -218,14 +198,10 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster12" fitHeight="170.0" fitWidth="130.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster12" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
-                              <Label fx:id="lblTitulo12" prefWidth="405.0" text="Título" textFill="WHITE">
+                              <Label fx:id="lblTitulo12" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
                                  </font>
@@ -233,12 +209,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="lblInfo12" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lblInfo12" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="lblGenero12" prefWidth="405.0" text="Género" textFill="WHITE">
+                              <Label fx:id="lblGenero12" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
@@ -255,14 +231,10 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster03" fitHeight="170.0" fitWidth="130.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster03" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
-                              <Label fx:id="lblTitulo03" prefWidth="405.0" text="Título" textFill="WHITE">
+                              <Label fx:id="lblTitulo03" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
                                  </font>
@@ -270,12 +242,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="lblInfo03" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lblInfo03" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="lblGenero03" prefWidth="405.0" text="Género" textFill="WHITE">
+                              <Label fx:id="lblGenero03" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
@@ -292,14 +264,10 @@
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                      <children>
-                        <ImageView fx:id="imgPoster13" fitHeight="170.0" fitWidth="130.0"  pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
-                           <image>
-                              <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
-                           </image>
-                        </ImageView>
+                        <ImageView fx:id="imgPoster13" fitHeight="170.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS" />
                         <VBox prefHeight="202.0" prefWidth="455.0">
                            <children>
-                              <Label fx:id="lblTitulo13" prefWidth="405.0" text="Título" textFill="WHITE">
+                              <Label fx:id="lblTitulo13" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="20.0" />
                                  </font>
@@ -307,12 +275,12 @@
                                     <Insets bottom="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="lblInfo13" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" text="Información sobre la película o serie" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lblInfo13" alignment="TOP_LEFT" prefHeight="123.0" prefWidth="409.0" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="lblGenero13" prefWidth="405.0" text="Género" textFill="WHITE">
+                              <Label fx:id="lblGenero13" prefWidth="405.0" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="16.0" />
                                  </font>
