--- a/src/main/resources/views/PaneTop.fxml
+++ b/src/main/resources/views/PaneTop.fxml
@@ -103,7 +103,7 @@
                <children>
                   <HBox alignment="CENTER_LEFT" maxWidth="1202.0" minWidth="1202.0" prefHeight="46.0" prefWidth="1202.0" spacing="20.0">
                      <children>
-                        <RadioButton fx:id="rbTodos" mnemonicParsing="false" selected="true" text="Todos los tiempos" textFill="WHITE">
+                        <RadioButton fx:id="rbTodos" mnemonicParsing="false" onMouseClicked="#allTimePressed" selected="true" text="Todos los tiempos" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -114,17 +114,17 @@
                               <Insets left="25.0" />
                            </HBox.margin>
                         </RadioButton>
-                        <RadioButton fx:id="rbDecada" mnemonicParsing="false" text="Última década" textFill="WHITE" toggleGroup="$btnGroup">
+                        <RadioButton fx:id="rbDecada" mnemonicParsing="false" onMouseClicked="#LastTenYearsPressed" text="Última década" textFill="WHITE" toggleGroup="$btnGroup">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="rbAnno" mnemonicParsing="false" text="Este año" textFill="WHITE" toggleGroup="$btnGroup">
+                        <RadioButton fx:id="rbAnno" mnemonicParsing="false" onMouseClicked="#thisYearPressed" text="Este año" textFill="WHITE" toggleGroup="$btnGroup">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="rb3Meses" mnemonicParsing="false" text="Últimos 3 meses" textFill="WHITE" toggleGroup="$btnGroup">
+                        <RadioButton fx:id="rb3Meses" mnemonicParsing="false" onMouseClicked="#LastThreeMonthsPressed" text="Últimos 3 meses" textFill="WHITE" toggleGroup="$btnGroup">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -143,7 +143,7 @@
                <children>
                   <VBox>
                      <children>
-                        <Label fx:id="lblTitulo" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="1120.0" text="TITULO" textFill="WHITE" wrapText="true">
+                        <Label fx:id="lblTitulo" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="1120.0" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="28.0" />
                            </font>
@@ -151,7 +151,7 @@
                               <Insets bottom="3.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="lblDirectorGenero" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="1120.0" text="Director · Genero" textFill="#ec1b1b" wrapText="true">
+                        <Label fx:id="lblDirectorGenero" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="1120.0" textFill="#ec1b1b" wrapText="true">
                            <font>
                               <Font name="System Bold" size="22.0" />
                            </font>
@@ -159,12 +159,12 @@
                               <Insets bottom="10.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="lblEstreno" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="400.0" text="1994" textFill="WHITE">
+                        <Label fx:id="lblEstreno" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="400.0" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblTituloSinopsis" alignment="TOP_LEFT" prefHeight="40.0" prefWidth="300.0" text="Sinopsis:" textFill="WHITE">
+                        <Label fx:id="lblTituloSinopsis" alignment="TOP_LEFT" prefHeight="40.0" prefWidth="300.0" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="20.0" />
                            </font>
@@ -172,7 +172,7 @@
                               <Insets top="12.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="lblSinopsis" alignment="TOP_LEFT" minWidth="1120.0" prefHeight="120.0" prefWidth="1120.0" text="Ejemplo texto sinopsis" textFill="WHITE" wrapText="true">
+                        <Label fx:id="lblSinopsis" alignment="TOP_LEFT" minWidth="1120.0" prefHeight="120.0" prefWidth="1120.0" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
